# legged_robots_25

./: .gitignore  questions.txt
.devcontainer/: devcontainer.json
install/: local_setup.sh  setup.sh
install/reemc_description/share/reemc_description/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ros_visuals/lib/ros_visuals/: ros_visuals_node
install/ros_visuals/share/ros_visuals/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/talos_description/share/talos_description/: local_setup.sh  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
my_workspace/: ReadMe.md  frames_2025-06-01_11.45.12.gv  questions.txt
my_workspace/install/: local_setup.sh  setup.sh
my_workspace/log/: latest_build
my_workspace/src/T2_template/Template/: t2_temp.py
my_workspace/src/T2_template/Template/reemc_description/: CMakeLists.txt
my_workspace/src/T4_template/bugfix_simulator/: robot.py
my_workspace/src/bullet_sims/: ReadME.md  package.xml  setup.cfg  setup.py
my_workspace/src/bullet_sims/bullet_sims/: answer.txt  interactive_marker_hand.py  interactive_markers.py  t21.py  t22.py  t23.py  t2_temp.py  t3_main.py  teleoperation.py
my_workspace/src/bullet_sims/launch/: launch.py
my_workspace/src/reemc_description/: package.xml
my_workspace/src/ros_visuals/: Readme.md  setup.cfg  setup.py
my_workspace/src/simulator/: package.xml  setup.py
my_workspace/src/talos_description/: CMakeLists.txt
my_workspace/src/tutorial_4/: package.xml  setup.cfg  setup.py
(+32 files in other folders)
